[gd_scene load_steps=11 format=3 uid="uid://147bdfxh4eyb"]

[ext_resource type="Script" path="res://Scripts/Interactables/hidden_1up_point.gd" id="1_am5pw"]
[ext_resource type="Texture2D" uid="uid://cc38oksw2dkdu" path="res://Assets/Sprites/Items/1up.png" id="2_t53k2"]
[ext_resource type="FontFile" uid="uid://dnhv8qscmtqcl" path="res://Assets/Sprites/UI/ScoreFont.png" id="3_00o1q"]
[ext_resource type="AudioStream" uid="uid://dmv3t04mkrfrf" path="res://Assets/Audio/SFX/1up1.mp3" id="4_12i71"]
[ext_resource type="PackedScene" uid="uid://ywuc3q4pxfhj" path="res://Instances/Prefabs/Items/passerby_item.tscn" id="5_00o1q"]
[ext_resource type="PackedScene" uid="uid://bimrxpg5a4yrk" path="res://Instances/Prefabs/Items/1_up.tscn" id="6_12i71"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pq8i3"]

[sub_resource type="Animation" id="Animation_wsgb5"]
resource_name = "Collect"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.733333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-8, -8), Vector2(-8, -16), Vector2(-8, -8)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.466667, 0.733333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_og8dq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-8, -8)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_113jd"]
_data = {
&"Collect": SubResource("Animation_wsgb5"),
&"RESET": SubResource("Animation_og8dq")
}

[node name="Hidden1UPPoint" type="Node2D"]
script = ExtResource("1_am5pw")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_t53k2")
hframes = 2

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_pq8i3")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -8.0
offset_top = -8.0
offset_right = 32.0
offset_bottom = 15.0
theme_override_fonts/font = ExtResource("3_00o1q")
text = "1"

[node name="Animation" type="AnimationPlayer" parent="Label"]
libraries = {
&"": SubResource("AnimationLibrary_113jd")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_12i71")

[node name="PasserbyItem" parent="." instance=ExtResource("5_00o1q")]
item = ExtResource("6_12i71")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
